--- a/1_HTML5/11_HTML실습문제2.html
+++ b/1_HTML5/11_HTML실습문제2.html
@@ -15,11 +15,15 @@
                     <li>email : <input type="email" placeholder="answer@naver.com"></li><br>
                     <li>홈페이지 : <input type="url" value="http://"> </li><br>
                     <li>
-                        지역 : <select name="local">
-                                <option>부산</option>
-                              </select></li>
+                        <lable>지역 : </lable>
+                            <select name="local">
+                                <option value="부산">부산</option>
+                                <option value="광주">광주</option>
+                                <option vlaue="서울">서울</option>
+                            </select></li>
                 </ol>
         </fieldset>
+        
         <fieldset>
             <legend>납품자 정보</legend>
                 <ul>
