--- a/1_HTML5/12_HTML실습문제3.html
+++ b/1_HTML5/12_HTML실습문제3.html
@@ -7,8 +7,8 @@
     <title>12_HTML실습문제3</title>
 </head>
 <body>
-    <h1>회원가입</h1>
     <form action="#">
+        <h1>회원가입</h1>
         <fieldset>
             <legend>필수 입력 사항</legend>
             <table>
@@ -19,17 +19,21 @@
                 </tr>
                 <tr>
                     <th>비밀번호</th>
-                    <td colspan="2"><input type="text" size=30 placeholder="영문,숫자,특수문자 포함 8자 이상"></td>
+                    <td colspan="2"><input type="password" size="30" placeholder="영문,숫자,특수문자 포함 8자 이상"></td>
                 </tr>
                 <tr>
                     <th>비밀번호 확인</th>
-                    <td colspan="2"><input type="text" size=30></td>
+                    <td colspan="2"><input type="password" size="30"></td>
                 </tr>
                 <tr>
                     <th>Email</th>
                     <td><input type="email"></td>
                     <td><select>
-                        <option>직접입력</option>
+                        <option selected>직접입력</option>
+                        <option>naver.com</option>
+                        <option>nate.com</option>
+                        <option>gmail.com</option>
+                        
                     </select></td>
                 </tr>
             </table>
@@ -37,7 +41,7 @@
 
         <fieldset>
             <legend>추가 정보</legend>
-            프로필 사진 <button>파일 선택</button> 선택된 파일 없음
+            프로필 사진 <input type="file"></input>
             <br><br>
             성별 : <input type="radio"> 남자 <input type="radio"> 여자
             <br><br>
@@ -52,7 +56,9 @@
             <textarea cols="70" rows="10"></textarea>
         </fieldset><br>
         
-        <button type="submit">회원가입</button> <button type="reset">다시입력</button> <button>이전으로</button>
+        <button type="submit">회원가입</button>
+        <button type="reset">다시입력</button>
+        <button type="button">이전으로</button>
     </form>   
 </body>
 </html>
