--- a/1_HTML5/06_영역관련태그.html
+++ b/1_HTML5/06_영역관련태그.html
@@ -104,9 +104,8 @@
     <div>
         <span>1</span><span>2</span><span>3</span><span>4</span><span>5</span>
     </div>
-    <div>
-        <span>1</span><span>2</span><span>3</span><span>4</span><span>5</span>
-    </div>
+    <span>1</span><span>2</span><span>3</span><span>4</span><span>5</span>
+   
 
     <hr>
 
@@ -180,7 +179,7 @@
     <h2>iframe태그</h2>
     <p> 웹 문서 내부에 다른 웹 문서를 추가하는 태그(inline형식) </p>
 
-    <iframe width="800px" height="1000px" src="04_표관련태그.html"></iframe>
+    <iframe width="800px" height="1000px" src="04_표관련태그.html"></iframe><br>
     <iframe width="600px" height="1000px" src="https://www.khsmart.co.kr/main/index.jsp"></iframe>
 </body>
 </html>
