--- a/2_CSS3/01_CSS개요,CSS선택자1.html
+++ b/2_CSS3/01_CSS개요,CSS선택자1.html
@@ -53,9 +53,9 @@
         }
 
         /* class선택자 이용해 미리 CSS코드를 작성하고 HTML 코드를 작성해 클래스 지정도 가능 */
+        .bold{ font-weight : bold; /*글자 두께 : 두껍게*/ }
 
-        .bold{ font-weight : bold; /*글자 두께*/ }
-
+        
         /* 모든 요소 선택자(*) */
         *{
             font-size : 20px; /*글자 크기*/
