--- a/2_CSS3/02_CSS선택자2.html
+++ b/2_CSS3/02_CSS선택자2.html
@@ -35,6 +35,8 @@
     <p name="name-2">p3</p>
     <p name="name-2" class="test-1">p4</p>
 
+
+
     <hr>
     <h3>자식 선택자 (>)</h3>
     <pre>
@@ -50,10 +52,13 @@
 
     <ul id="parent-ul"> 부모
         <li class="test-2">자식1</li>
+
         <li>
-            <span>자식2 </span>  
+            <span>자식2</span>  
         </li>
+
         <li>자식3</li>
+
         <li>
             <span class ="test-2">자식4</span> 
         </li>
@@ -92,9 +97,9 @@
     <h1>반응 선택자</h1>
     <pre>
     사용자의 움직임에 반응하여 선택되는 선택자
-    - 선택자:active     -> 사용자가 선택된 요소를 클릭하고 있을 경우
+    - 선택자:active     -> 사용자가 선택된 요소를 클릭중일 경우 활성화
 
-    - 선택자:hover      -> 선택된 요소에 마우스를 올리고 내리는 경우
+    - 선택자:hover      -> 선택된 요소에 마우스를 올리고 내릴 경우
                         -> 올릴 경우 선택자:hover에 작성된 CSS코드가 적용
                         -> 내릴 경우 이전 상태로 돌아감
     </pre>
