--- a/2_CSS3/14_flexbox1.html
+++ b/2_CSS3/14_flexbox1.html
@@ -12,19 +12,21 @@
     <h1>flexbox</h1>
     <pre>
     요소에 정렬되는 방향, 순서, 요소 간의 간격을 직접 수치적 처리하지 않더라도
-    알아서 유용하게 처리해주는 방법
+    자동으로 알아서 유용하게 처리해주는 방법
 
     * flexbox이용 시 반드시 알아야 할 것! 
     1. flexbox의 구성
-        - flex contatiner :  정렬이 필요한 요소를 감싸는 요소
-        - itme :  정렬이 필요한 요소(정렬 적용 대상)
+        - flex container :  정렬이 필요한 요소를 감싸는 요소
+        - item :  정렬이 필요한 요소(정렬 적용 대상)
 
-       -> flex관련 css속성이 flex-container. item으로 구문으로 나뉨
+       -> flex관련 css속성이 flex-container, item으로 구문으로 나뉨
 
     2) flexbox의 축(axis)
         - 중심 축(main-axis)
         - 교차축, 반대축(cross-axis)
     </pre>
+
+    <hr>
     <div class="flex-container">
         <div class="item item1">items1</div>
         <div class="item item2">items2</div>
