--- a/1_HTML5/10_HTML실습문제1.html
+++ b/1_HTML5/10_HTML실습문제1.html
@@ -45,6 +45,7 @@
         배송시 요청사항: <textarea></textarea><br><br>
 
         <button type="submit">주문하기</button>
+        <!-- submit는 기본값 -->
     </form>
 </body>
 </html>
