--- a/2_CSS3/14_flexbox1.html
+++ b/2_CSS3/14_flexbox1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/flex-style.css">
     <link rel="stylesheet" href="css/14_flexbox1.css">
 </head>
-<>
+
     <h1>flexbox</h1>
     <pre>
     요소에 정렬되는 방향, 순서, 요소 간의 간격을 직접 수치적 처리하지 않더라도
@@ -27,7 +27,7 @@
     </pre>
 
     <hr>
-    <div class="flex-container">
+    <div class="container">
         <div class="item item1">items1</div>
         <div class="item item2">items2</div>
         <div class="item item3">items3</div>
