--- a/3_Javascript/html/01_JS개요.html
+++ b/3_Javascript/html/01_JS개요.html
@@ -67,12 +67,11 @@
         - head / body 태그 내부 어디든지 작성 가능하나 단, 작성된 장소에 따라 용도가 다름 
         
         - 코드는 랜더링을 통해 위에서 아래로 해석된다.
-        head 태그 내 상단에 수만줄의 script를 작성할 경우 스크립트 언어를 읽는 시간이 소요되어
-        화면이 몇초~몇분간 하얗게 뜨는 상황이 발생할 수도 있다.
+        head 태그 내 상단에 수 백,만줄의 script를 작성할 경우 스크립트 언어를 읽는 시간이 소요되어 화면이 몇 초~몇 분간 하얗게 뜨는 상황이 발생할 수도 있다.
         따라서 나머지는 전부 body 태그 마지막 부분에 작성하여 화면이 먼저 랜더링 되도록 한다.
         
         - head 태그 내부에 작성하는 경우
-            -> 페이지 랜더링 시 수행되어야 하는 기능이 있을 경우
+            ㄴ 페이지 랜더링 시 수행되어야 하는 기능이 있을 경우
     -->
 
     <script> // script태그 내부는 JS작성 -> JS문법과 주석을 사용
