--- a/3_Javascript/html/09_배열.html
+++ b/3_Javascript/html/09_배열.html
@@ -11,7 +11,7 @@
     <h1>배열(Array)</h1>
     <pre>
         배열: 변수를 묶음으로 다루는 것(변수가 연속적으로 나열됨)
-        JS  변수 특징 : 값이 저장되기 전 까지 자료형이 지정되지 않음.
+        JS  변수 특징 : 값이 초기화 되기 전 까지 자료형이 지정되지 않는다.
 
         * JS 배열 특징
         1. 자료형 제한 X
